--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url": "https://github.com/timyourivh/vite-plugin-json5"
   },
   "peerDependencies": {
+    "@rollup/pluginutils": ">= 3.0.0",
     "vite": "^2.6.0 || ^3.0.0 || ^4.0.0"
   },
   "dependencies": {
