--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "json5": "^2.2.3"
   },
   "devDependencies": {
+    "@rollup/pluginutils": "^5.1.0",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
