--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "url": "https://github.com/timyourivh/vite-plugin-json5"
   },
   "peerDependencies": {
+    "@rollup/pluginutils": ">= 3.0.0",
     "vite": "^2.6.0 || ^3.0.0 || ^4.0.0"
   },
   "dependencies": {
     "json5": "^2.2.3"
   },
   "devDependencies": {
+    "@rollup/pluginutils": "^5.1.0",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
