--- a/package.json
+++ b/package.json
@@ -43,13 +43,15 @@
   },
   "devDependencies": {
     "@rollup/pluginutils": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
+    "typescript": "*",
     "vite": "^4.3.9"
   }
 }
