--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,5 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
-[*.{yml,yaml,js,json}]
+[*.{yml,yaml,ts,js,json}]
 indent_size = 2
