--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "scripts": {
     "lintfix": "eslint src/** --ext \".js\" --ignore-path .gitignore --fix",
-    "build": "tsup"
+    "build": "tsc"
   },
   "keywords": [
     "vite",
@@ -50,7 +50,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
-    "tsup": "^6.5.0",
     "typescript": "*",
     "vite": "^4.3.9"
   }
