--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "url": "https://github.com/timyourivh/vite-plugin-json5"
   },
   "peerDependencies": {
-    "@rollup/pluginutils": ">= 3.0.0",
-    "vite": "^2.6.0 || ^3.0.0 || ^4.0.0"
+    "@rollup/pluginutils": ">= 3.0.0 || ^4.0.0 || ^5.0.0",
+    "vite": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "json5": "^2.2.3"
