--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "url": "https://github.com/timyourivh/vite-plugin-json5"
   },
   "peerDependencies": {
-    "@rollup/pluginutils": ">= 3.0.0 || ^4.0.0 || ^5.0.0",
     "vite": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
+    "@rollup/pluginutils": "^5.0.0",
     "json5": "^2.2.3"
   },
   "devDependencies": {
